--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Tactile theme
-description: Tactile is a theme for GitHub Pages.
-show_downloads: true
+title: Diffraction
+description: Diffraction and diffraction gratings in graphics.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
