Caption test and title test

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Diffraction"
+title: Diffraction
 description: Diffraction and diffraction gratings in graphics.
 show_downloads: false
 google_analytics:
