--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-
+title: "Diffraction Stuff"
 description: Diffraction and diffraction gratings in graphics.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
 baseurl: "/cs354-final-report"
 url: "http://tabenmalik.github.io"
-title: Diffraction stuff
